--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -14,7 +14,9 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install dependencies
-        run: pip install -r requirements.txt
+       run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
       - name: Run script
         env:
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
